[package]
name = "search_code"
version = "0.1.0"
authors = [ "laplace"]
edition = "2021"
license = "MIT"
description = "Search code and search symbols"
keywords = ["cli", "code search"]

[dependencies]
clap = "4.5.16"
colored = "2.1.0"
indicatif = "0.17.8"
prettytable = "0.10.0"
tree-sitter = "0.23.0"
tree-sitter-cpp = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-rust = "0.23.0"

[build-dependencies]
cc = "*"
